--- a/css/app.css
+++ b/css/app.css
@@ -81,6 +81,12 @@ h1 {
     background: #02ccba;
 }
 
+.deck .card.no-match {
+    font-size: 33px;
+    background: #e25a61;
+    animation: toss 3s;
+}
+
 .deck .card.pulse {
     animation: pulse 1.5s;
 }
@@ -110,6 +116,20 @@ h1 {
   100% {
     transform: scale(1);
   }
+}
+
+@keyframes toss {
+    0% {
+        transform: rotate(5deg) translate(.55em)
+    }
+
+    50% {
+        transform: rotate(-5deg) translate(-1.1em);
+    }
+
+    100% {
+        transform: rotate(2deg)
+    }
 }
 
 /*
